  * Fixes a crash when writes begin at an offset beyond maximum file length. This fixes a
    bug where running ld inside the filesystem would cause it to crash.
  * Switch to using zerolog instead of logrus for logging. Though zerolog is supposedly 
    faster, the real reason to switch is that it's much easier for me (and hopefully you)
    to read. Also, pretty colors!

 -- Jeff Stafford <jeff.stafford@protonmail.com>  Tue, 2 Nov 2021 19:00:00 -0400

onedriver (0.11.2-1) focal; urgency=low

  * onedriver now disallows rmdir on nonempty directories.
  * The filesystem now detects if it is offline more reliably.
 
 -- Jeff Stafford <jeff.stafford@protonmail.com>  Tue, 17 Aug 2021 00:15:00 -0400

onedriver (0.11.1-1) focal; urgency=low

  * Fix startup crash in onedriver-launcher when onedriver has not been launched before.
 
 -- Jeff Stafford <jeff.stafford@protonmail.com>  Sun, 11 Jul 2021 00:30:00 -0400

onedriver (0.11.0-1) focal; urgency=low

  * Now includes a snazzy GUI for managing your mountpoints. No terminal skills are required
    to use onedriver now.
  * The upload logic has been rewritten to no longer use 0-byte files as placeholders in 
    any scenario. This fixes a race condition where software like LibreOffice, KeepassXC, or 
    Krita could generate a 0-byte file instead of the intended file when the file was 4MB or
    larger.
  * onedriver now uses etags AND modification times when syncing server-side changes back to
    the client. This reduces the number of times that files must be redownloaded because of
    bad timestamp data from the Microsoft API.

 -- Jeff Stafford <jeff.stafford@protonmail.com>  Sat, 3 Jul 2021 13:30:00 -0400

onedriver (0.10.1-1) focal; urgency=low

  * Fix the onedriver .desktop launcher so it uses the new systemd unit name.
 
 -- Jeff Stafford <jeff.stafford@protonmail.com>  Mon, 17 May 2021 02:30:00 -0400

onedriver (0.10.0-1) focal; urgency=low
    