@@ -27,10 +27,10 @@ func usage() {
 	fmt.Printf(`onedriver - A Linux client for Microsoft OneDrive.
 
 This program will mount your OneDrive account as a Linux filesystem at the
-specified mountpoint. Note that this is not a sync client - files are fetched
-on-demand and cached locally. Only files you actually use will be downloaded.
-While offline, the filesystem will be read-only until connectivity is re-
-established.
+specified mountpoint. Note that this is not a sync client - files are only
+fetched on-demand and cached locally. Only files you actually use will be
+downloaded. While offline, the filesystem will be read-only until
+connectivity is re-established.
 
 Usage: onedriver [options] <mountpoint>
 
@@ -43,8 +43,12 @@ func main() {
 	// setup cli parsing
 	authOnly := flag.BoolP("auth-only", "a", false,
 		"Authenticate to OneDrive and then exit.")
-	logLevel := flag.StringP("log", "l", "debug", "Set logging level/verbosity. "+
-		"Can be one of: fatal, error, warn, info, debug, trace")
+	headless := flag.BoolP("no-browser", "n", false,
+		"This disables launching the built-in web browser during authentication. "+
+			"Follow the instructions in the terminal to authenticate to OneDrive.")
+	logLevel := flag.StringP("log", "l", "debug",
+		"Set logging level/verbosity for the filesystem. "+
+			"Can be one of: fatal, error, warn, info, debug, trace")
 	cacheDir := flag.StringP("cache-dir", "c", "",
 		"Change the default cache directory used by onedriver. "+
 			"Will be created if the path does not already exist.")
@@ -52,7 +56,8 @@ func main() {
 		"Delete the existing onedriver cache directory and then exit. "+
 			"Equivalent to resetting the program.")
 	versionFlag := flag.BoolP("version", "v", false, "Display program version.")
-	debugOn := flag.BoolP("debug", "d", false, "Enable FUSE debug logging.")
+	debugOn := flag.BoolP("debug", "d", false, "Enable FUSE debug logging. "+
+		"This logs communication between onedriver and the kernel.")
 	flag.BoolP("help", "h", false, "Displays this help message.")
 	flag.Usage = usage
 	flag.Parse()
@@ -82,7 +87,7 @@ func main() {
 	authPath := filepath.Join(dir, "auth_tokens.json")
 	if *authOnly {
 		os.Remove(authPath)
-		graph.Authenticate(authPath)
+		graph.Authenticate(authPath, *headless)
 		os.Exit(0)
 	}
 
@@ -92,7 +97,8 @@ func main() {
 	// determine and validate mountpoint
 	if len(flag.Args()) == 0 {
 		flag.Usage()
-		log.Fatal().Msg("No mountpoint provided, exiting.")
+		fmt.Fprintf(os.Stderr, "\nNo mountpoint provided, exiting.\n")
+		os.Exit(1)
 	}
 
 	log.Info().Msgf("onedriver v%s %s", version, commit[:clen])
@@ -108,7 +114,7 @@ func main() {
 	}
 
 	// create the filesystem
-	auth := graph.Authenticate(authPath)
+	auth := graph.Authenticate(authPath, *headless)
 	fs := odfs.NewFilesystem(auth, filepath.Join(dir, "onedriver.db"))
 	go fs.DeltaLoop(30 * time.Second)
 	xdgVolumeInfo(fs, auth)
