@@ -91,7 +91,10 @@ cp resources/%{name}.1.gz %{buildroot}/usr/share/man/man1
   bug where running ld inside the filesystem would cause it to crash.
 - Switch to using zerolog instead of logrus for logging. Though zerolog is supposedly 
   faster, the real reason to switch is that it's much easier for me (and hopefully you)
-  to read!
+  to read! Also, pretty colors!
+- onedriver now gives you the option to choose to authenticate via the terminal when 
+  authenticating via the new --no-browser option (this is the functionality from the 
+  old "headless" build).
 
 * Tue Aug 17 2021 Jeff Stafford <jeff.stafford@protonmail.com> - 0.11.2
 - onedriver now disallows rmdir on nonempty directories.
